@@ -1,3 +1,6 @@
+7/3/12
+  Multiple transient windows are handled properly now
+
 6/3/12
   Added option to have new window at the top of the stack when using attach aside
 
